force-app/main/default/objects/Bundle_Item__c/Bundle_Item__c.object-meta.xml
<CustomObject>
    <label>Bundle Item</label>
    <nameField>
        <displayFormat>MI-{0000000}</displayFormat>
        <label>Bundle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bundle Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>